--- a/CSS/style1.css
+++ b/CSS/style1.css
@@ -53,7 +53,7 @@ body {
     border-radius: 20px;
     width: 70em;
     min-height: 200px;
-    margin-top: 2vh;
+    margin:6%;
     padding: 10px;
     box-shadow: 10px 10px 20px rgb(143, 141, 141);
     display: flex;
